--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,12 @@
 		    <artifactId>groovy-all</artifactId>
 		    <version>2.4.7</version>
 		</dependency>
-		
+
+		<dependency>
+		    <groupId>log4j</groupId>
+		    <artifactId>log4j</artifactId>
+		    <version>1.2.17</version>
+		</dependency>
 	</dependencies>
 
 	<build>
